<resources>
    <string name="app_name">Todo</string>
    <string name="todo_text_hint" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_text">e.g., Meet with Manager</string>
    <string name="priority">Priority</string>
    <string name="save">save</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="sample_text">Sample Text</string>
    <string name="delete">delete</string>
    <string name="show_tasks">Show Completed Tasks</string>
    <string name="hide_tasks">Hide Completed Tasks</string>
    <string name="sort">Sort</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="by_date_created">By Date Created</string>
    <string name="created_at">Created At:</string>

    <!--login-related-->
    <string name="here_to_get">Here To Get</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="start_here">Start here</string>
    <string name="register">Register</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="signin">Sign in</string>
    <string name="one_step_more">One step more</string>
    <string name="confirmation_code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="identity_id_not_found">Identify not found!</string>
    <string name="let_me_help">Let me help!</string>
    <string name="send_password_code">Send</string>
    <string name="happy_again">Are you happy again?</string>
    <string name="signout">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="close_connection">Close Connection</string>
    <string name="connect">Connect to Socket</string>
</resources>