<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/show_hide"
        android:title="@string/show_tasks" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/created"
                android:icon="@drawable/ic_baseline_access_time_24"
                android:title="@string/by_date_created" />
            <item
                android:id="@+id/priority_asc"
                android:icon="@drawable/ic_baseline_arrow_upward_24"
                android:title="@string/priority" />
            <item
                android:id="@+id/priority_des"
                android:icon="@drawable/ic_baseline_arrow_downward_24"
                android:title="@string/priority" />
            <item
                android:id="@+id/name_asc"
                android:icon="@drawable/ic_baseline_arrow_upward_24"
                android:title="@string/alphabetically" />
            <item
                android:id="@+id/name_des"
                android:icon="@drawable/ic_baseline_arrow_downward_24"
                android:title="@string/alphabetically" />
        </menu>
    </item>
    <item
        android:id="@+id/profile"
        android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/change_password"
                android:icon="@drawable/ic_password"
                android:title="@string/change_password" />
            <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_log_out"
                android:title="@string/signout" />
        </menu>
    </item>
</menu>